db connection string added, and connection setup

--- a/AppointmentSystem/appsettings.json
+++ b/AppointmentSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppointmentsSystemDb": "data source=localhost; initial catalog=appointmentsSystemDb;integrated security=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
