migrations created and db updated

--- a/AppointmentSystem/appsettings.json
+++ b/AppointmentSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppointmentsSystemDb": "data source=localhost; initial catalog=appointmentsSystemDb;integrated security=True;MultipleActiveResultSets=True;"
+    "AppointmentsSystemDb": "data source=NITRO;initial catalog=appointmentsSystemDb;trusted_connection=true"
   },
   "Logging": {
     "LogLevel": {
